--- a/app/views/trietree/near.html.erb
+++ b/app/views/trietree/near.html.erb
@@ -2,7 +2,7 @@
 <div id="description">
   <ul>
     <li>gang1で使われていた画像を検索できます</li>
-    <li><i class="fas fa-file-download faa-bounce animated fa-fw"></i>←このアイコンがあるものはクリックでダウンロードできます</li>
+    <li><i class="fas fa-file-download faa-bounce animated fa-fw"></i>←クリックでダウンロードできます</li>
   </ul>
 </div>
 <%= form_tag({:controller => 'trietree', :action => 'near'}, :id => 'form1_id', :name => 'keyword_form', :remote => true, :class => 'form-ajax') do -%>
@@ -51,6 +51,7 @@
 <%= submit_tag('send', :class => 'btn btn-primary btn-sm', :type => 'hidden', :id => 'submit_btn') -%>
 <% end %>
 
-<div id="ajax-response-wrapper"></div>
-<div id="ajax-response-wrapper-aho"></div>
+<div id="ajax-response-wrapper" class="aho-contents"></div>
+<div id="ajax-response-wrapper-div2" class="aho-contents"></div>
+<div id="ajax-response-wrapper-div3" class="aho-contents"></div>
 <div id="common-pager"></div>
