--- a/app/views/trietree/near.js.erb
+++ b/app/views/trietree/near.js.erb
@@ -3,14 +3,21 @@ if ($('#ajax-response-wrapper').size() === 0) {
 } else {
   $('#ajax-response-wrapper').html('');
 }
-$('#ajax-response-wrapper').html('<%=j render partial: "ajax_container", collections: @data %>');
+$('#ajax-response-wrapper').html('<%=j render partial: "ajax_container", collection: @data, :as => "obj" %>');
 
-if ($('#ajax-response-wrapper-aho').size() === 0) {
-  $('body').append('<div id="ajax-response-wrapper-aho"></div>');
+if ($('#ajax-response-wrapper-div2').size() === 0) {
+  $('body').append('<div id="ajax-response-wrapper-div2"></div>');
 } else {
-  $('#ajax-response-wrapper-aho').html('');
+  $('#ajax-response-wrapper-div2').html('');
 }
-$('#ajax-response-wrapper-aho').html('<%=j render partial: "ajax_container_failure", collections: @failure_data %>');
+$('#ajax-response-wrapper-div2').html('<%=j render partial: "ajax_container", collection: @failure_data, :as => "obj" %>');
+
+if ($('#ajax-response-wrapper-div3').size() === 0) {
+  $('body').append('<div id="ajax-response-wrapper-div3"></div>');
+} else {
+  $('#ajax-response-wrapper-div3').html('');
+}
+$('#ajax-response-wrapper-div3').html('<%=j render partial: "ajax_container", collection: @data3, :as => "obj" %>');
 
 if ($('#common-pager').size() === 0) {
   $('body').append('<div id="common-pager"></div>');
