3カラムの中央寄せ

--- a/app/views/trietree/near.html.erb
+++ b/app/views/trietree/near.html.erb
@@ -51,7 +51,9 @@
 <%= submit_tag('send', :class => 'btn btn-primary btn-sm', :type => 'hidden', :id => 'submit_btn') -%>
 <% end %>
 
+<div id="ajax-response">
 <div id="ajax-response-wrapper" class="aho-contents"></div>
 <div id="ajax-response-wrapper-div2" class="aho-contents"></div>
 <div id="ajax-response-wrapper-div3" class="aho-contents"></div>
+</div>
 <div id="common-pager"></div>
