--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -85,6 +85,23 @@
    position: relative;
  }
 
+#ajax-response {
+  width: 100%;
+  text-align: center;
+}
+
+#ajax-response-wrapper {
+  /* width: 378px; */
+}
+
+#ajax-response-wrapper-div2 {
+  /* width: 378px; */
+}
+
+#ajax-response-wrapper-div3 {
+  /* width: 378px; */
+}
+
  #ajax-search-card-aho > ul li, ol li {
    color: #2d8fdd;
    border-left: solid 6px #2d8fdd;/*左側の線*/
