--- a/app/views/trietree/near.html.erb
+++ b/app/views/trietree/near.html.erb
@@ -48,7 +48,7 @@
   </div>
 </div>
 
-<%= submit_tag('send', :class => 'btn btn-primary btn-sm', :type => 'hidden', :id => 'submit_btn') -%>
+<!-- <%= submit_tag('send', :class => 'btn btn-primary btn-sm', :type => 'hidden', :id => 'submit_btn') -%> -->
 <% end %>
 
 <div id="ajax-response">
