--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,25 +13,28 @@
     <%= javascript_include_tag "application" %>
   </head>
   <body>
-    <div id="loader-bg">
-      <div id="loader">
-        <div class="sk-cube-grid">
-          <div class="sk-cube sk-cube1"></div>
-          <div class="sk-cube sk-cube2"></div>
-          <div class="sk-cube sk-cube3"></div>
-          <div class="sk-cube sk-cube4"></div>
-          <div class="sk-cube sk-cube5"></div>
-          <div class="sk-cube sk-cube6"></div>
-          <div class="sk-cube sk-cube7"></div>
-          <div class="sk-cube sk-cube8"></div>
-          <div class="sk-cube sk-cube9"></div>
+    <% cache "loader", expires_in: 10.minutes, skip_digest: true do %>
+      <div id="loader-bg">
+        <div id="loader">
+          <div class="sk-cube-grid">
+            <div class="sk-cube sk-cube1"></div>
+            <div class="sk-cube sk-cube2"></div>
+            <div class="sk-cube sk-cube3"></div>
+            <div class="sk-cube sk-cube4"></div>
+            <div class="sk-cube sk-cube5"></div>
+            <div class="sk-cube sk-cube6"></div>
+            <div class="sk-cube sk-cube7"></div>
+            <div class="sk-cube sk-cube8"></div>
+            <div class="sk-cube sk-cube9"></div>
+          </div>
         </div>
       </div>
-    </div>
+    <% end %>
   <div id="wrap">
     <%= yield %>
   </div>
     <script src="/assets/js/classie.js"></script>
+    <!-- <script src="/assets/js/jquery.lazyload.min.js"></script> -->
     <script>
       $(function() {
         var h = $(window).height();
