--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>リソース検索</title>
+    <title>gang1カード検索</title>
     <meta charset="UTF-8">
     <link href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.0.10/font-awesome-animation.css" type="text/css" media="all" />
@@ -46,7 +46,7 @@
       $(window).load(function () { //全ての読み込みが完了したら実行
         $('#loader-bg').delay(900).fadeOut(800);
         $('#loader').delay(600).fadeOut(300);
-        $('#wrap').css('display', 'block');        
+        $('#wrap').css('display', 'block');
         window.history.pushState(get_history_obj_func(), null);
       });
 
