最終同期時刻

--- a/app/views/trietree/near.html.erb
+++ b/app/views/trietree/near.html.erb
@@ -1,4 +1,5 @@
 <h3><%= $ahoCorasick.env_str %>リソース検索</h3>
+<p>最終同期日時: <%= $update_time %></p>
 <div id="description">
   <ul>
     <li>リソース名を部分一致で検索できます</li>
